# RobotHexapod

./: .gitignore  CMakeLists.txt
apps/: CMakeLists.txt  main  main.cpp
robotHexapodControl/: README.md
robotHexapodControl/include/: body.hpp
robotHexapodSimulation/: CMakeLists.txt
robotHexapodSimulation/include/: leg.hpp  robotHexapod.hpp
robotHexapodSimulation/src/: robotHexapod.cpp
src/: main.cpp
